# jia

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  PHILOSOPHY-ARCHITECTURE.md  PHILOSOPHY-ARCHITECTURE.zh-CN.md  QUICKSTART.md  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  config.example.toml
.github/workflows/: ci.yml
benches/: benchmarks.rs
channels/: Cargo.toml
channels/src/: dedup.rs  lib.rs  telegram.rs
channels/src/telegram/: mod.rs
channels/src/wechat/: bot.rs  mod.rs  types.rs
docs/: rin-protocol.md  skill-evolution.md
frontend/: .gitignore  index.dev.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/components/: ChatBody.svelte  ChatHeader.svelte  CommandPalette.svelte  ConfirmDialog.svelte  EmptyState.svelte  FileBrowser.svelte  InputArea.svelte  MessageActions.svelte  MessageBubble.svelte  MessageGroup.svelte  SessionCard.svelte  SessionsHeader.svelte  ShimmerLogo.svelte  Sidebar.svelte  Skeleton.svelte  SpiritObserver.svelte  Toast.svelte  ToolCard.svelte  VijnanaSeeds.svelte  VijnanaStatus.svelte
frontend/src/lib/: api.ts  entries.ts  i18n.ts  markdown.ts  motion.ts  sse.ts  store.svelte.ts  themes.ts  time.ts  types.ts
frontend/src/pages/: Chat.svelte  Cron.svelte  Files.svelte  Monitor.svelte  Principles.svelte  Project.svelte  Projects.svelte  Session.svelte  Sessions.svelte  Settings.svelte  Skills.svelte  (+2 more)
kernel/: Cargo.toml
kernel/src/: error.rs  lib.rs  types.rs  utils.rs
kernel/src/geju/: evaluate.rs  mod.rs  patterns.rs
kernel/src/palaces/: mod.rs
kernel/src/palaces/dui_gateway/: agent.rs  auth.rs  confirm.rs  events.rs  mod.rs  monitor.rs  principles.rs  providers.rs  rin.rs  skills.rs  vijnana.rs  webhooks.rs  workspaces.rs
kernel/src/palaces/gen_store/: async_store.rs  graph.rs  helpers.rs  manas.rs  mod.rs  projects.rs  seeds.rs  sessions.rs  skills.rs  workspaces.rs
kernel/src/palaces/gen_store/migrations/: 001_init.sql  002_alters.sql  003_workspace_rename.sql
kernel/src/palaces/kan_io/: mod.rs
kernel/src/palaces/kun_config/: mod.rs
kernel/src/palaces/li_skill/evolution/: diff.rs  helpers.rs  tests.rs
kernel/src/palaces/qian_permission/: mod.rs  sandbox_docker.rs  sandbox_landlock.rs  sandbox_process.rs  sandbox_seatbelt.rs
kernel/src/palaces/xun_context/: mod.rs  reset.rs
kernel/src/palaces/zhen_tool/: base.rs  browser_cdp.rs  mod.rs  plugin_manager.rs  registry.rs  wasm_plugin.rs
kernel/src/palaces/zhen_tool/builtin/: ask_user.rs  browser_click.rs  browser_console.rs  browser_dialog.rs  browser_navigate.rs  browser_press.rs  browser_screenshot.rs  browser_scroll.rs  browser_snapshot.rs  browser_type.rs  computer_use.rs  cron_runner.rs  delegate.rs  git.rs  glob.rs  grep.rs  lsp.rs  mod.rs  namarupa.rs  opt_html.js  patch_file.rs  plan_mode.rs  read_file.rs  scratchpad.rs  shell.rs  skill.rs  task.rs  toolsearch.rs  web_execute_js.rs  web_fetch.rs  web_search.rs  worktree.rs  write_file.rs
kernel/src/palaces/zhen_tool/builtin/browser/: browser_console.rs  browser_navigate.rs  browser_scroll.rs  browser_snapshot.rs  mod.rs  web_fetch.rs
kernel/src/palaces/zhen_tool/builtin/computer/: mod.rs
kernel/src/palaces/zhen_tool/builtin/cron/: cron_tool.rs  mod.rs
kernel/src/palaces/zhen_tool/builtin/exec/: git.rs  lsp.rs  mod.rs  task.rs  worktree.rs
kernel/src/palaces/zhen_tool/builtin/fs/: glob.rs  mod.rs  scratchpad.rs  write_file.rs
kernel/src/palaces/zhen_tool/computer_driver/: mod.rs  schema.rs
kernel/src/palaces/zhen_tool/computer_driver/macos/: ax.rs  mod.rs  screenshot.rs
kernel/src/palaces/zhen_tool/mcp/: connection.rs  manager.rs  mod.rs  protocol.rs  tool.rs
kernel/src/palaces/zhong_core/: anthropic.rs  breaker.rs  gemini.rs  mod.rs  openai.rs  router.rs
kernel/src/plates/: mod.rs
kernel/src/plates/di_earth/: mod.rs
kernel/src/plates/ren_human/: mod.rs  session_bus.rs
kernel/src/plates/shen_spirit/: bai_hu.rs  baihu.rs  completion_check.rs  hook.rs  jiu_tian.rs  jiudi.rs  jiutian.rs  liuhe.rs  mod.rs  taiyin.rs  tengshe.rs  xuan_wu.rs  xuanwu.rs  zhifu.rs
kernel/src/plates/tian_heaven/: certainty.rs  loop.rs  loop_dispatch.rs  loop_hooks.rs  loop_parse.rs  loop_post.rs  loop_prompt.rs  mod.rs  spawn.rs
kernel/src/principles/: mod.rs
kernel/src/stems/: action.rs  events.rs  hooks.rs  intent.rs  mod.rs  stem.rs  tool_parse.rs
kernel/src/telemetry/: metrics.rs
kernel/src/vijnana/: mod.rs  user_profile.rs
kernel/src/vijnana/alaya/: disposition.rs  mod.rs
kernel/src/vijnana/manas/: mod.rs
kernel/src/vijnana/mano/: mod.rs
kernel/src/vijnana/vasana/: coactivation.rs  distillation.rs  mod.rs  signal.rs
kernel/src/vijnana/vasana/tests/: consolidation_stress.rs
kernel/src/vijnana/xunxi/: coactivation.rs  distillation.rs  mod.rs  signal.rs
kernel/src/vijnana/xunxi/tests/: consolidation_stress.rs
kernel/src/zuowang/: mod.rs
kernel/src/zuowang/pipeline/: mod.rs  tests.rs
kernel/src/zuowang/trigger/: mod.rs
skills/code-review/: SKILL.md
skills/codebase-exploration/: SKILL.md
skills/creative-ideation/: SKILL.md
skills/debugging/: SKILL.md
skills/frontend-svelte/: SKILL.md
skills/git-workflow/: SKILL.md
skills/requesting-code-review/: SKILL.md
skills/rust-unsafe/: SKILL.md
skills/safety/: SKILL.md
skills/shell-safety/: SKILL.md
skills/skill-creator/: SKILL.md
skills/spike/: SKILL.md
skills/subagent-delegation/: SKILL.md
skills/test-driven-development/: SKILL.md
skills/writing-plans/: SKILL.md
src/: error.rs  lib.rs  main.rs  types.rs
src/cli/: doctor.rs  mod.rs  start.rs  tui.rs
src/geju/: evaluate.rs  mod.rs
src/principles/: mod.rs
src/stems/: action.rs
src/telemetry/: metrics.rs
src/tui/: app.rs  composer.rs  connection.rs  mod.rs  render.rs  security.rs  state.rs
src/vijnana/: mod.rs  user_profile.rs
src/zuowang/: mod.rs
tests/: cognition.rs  concurrent.rs  e2e.rs  stress.rs
tui/: Cargo.toml
tui/src/: app.rs  connection.rs  lib.rs  markdown.rs  render.rs  security.rs  state.rs  widgets.rs  wrapping.rs
(+117 files in other folders)
