[workspace]
members = ["kernel", "tui", "channels"]
resolver = "3"

[package]
name = "jia"
version = "0.1.0"
edition = "2024"
description = "甲 (Jia) — AI Agent runtime based on Qimen Dunjia architecture"

[dependencies]
kernel = { path = "kernel" }
tui = { path = "tui", optional = true }
channels = { path = "channels" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }
axum = { version = "0.8", features = ["json", "macros"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio-util = "0.7"
url = "2"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
time = { version = "0.3.47" }
reqwest = { version = "0.12", features = ["json", "stream"] }
toml = "0.8"
tokio-stream = "0.1"
futures = "0.3"
dotenvy = "0.15"
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"

[features]
default = ["tui"]
tui = ["dep:tui"]
web-search = []
git = []
cron = []
mcp = []
agent-tool = []

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
