[package]
name = "tui"
version = "0.1.0"
edition = "2024"
description = "Jia TUI — terminal user interface"

[dependencies]
kernel = { path = "../kernel" }
ratatui = "0.29"
crossterm = "0.28"
tui-scrollview = "0.5"
unicode-width = "0.2"
pulldown-cmark = "0.12"
tokio = { version = "1", features = ["sync", "io-util", "net"] }
tokio-util = "0.7"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.47", features = ["local-offset"] }
uuid = { version = "1", features = ["v4"] }
